# pzl-interview-template

./: .env.example  .gitignore  CLAUDE.md  DSS.md  README.md  dss.config.ts  package.json  pyproject.toml
.claude/skills/dss/: SKILL.md
.claude/skills/git/: SKILL.md
.claude/skills/sandbox/: SKILL.md
Sandbox/: README.md  archive_cleanup.py
Sandbox/utils/: agc_style.py  visualization.py
data/raw/: Samples ID.xlsx
docs/background/: data-assets.md  git-best-practices.md  hamilton-intro.md
interview/: EVALUATOR_GUIDE.md  INSTRUCTIONS.md  RED_FLAGS.md  SAMPLE_ANSWERS.md  questions.md
scripts/: analysis.py  diabetes.py  rna.py  run.py
scripts/diabetes/: __init__.py
scripts/dss/: build.ts  db.ts  introspect.py  server.ts  start.ts  sync.ts
scripts/dss/app/: vite.config.ts
scripts/dss/app/src/: App.css  DataCatalog.css  DataCatalog.tsx  NodeHistoryModal.css  NodeHistoryModal.tsx  PipelineNode.tsx  layout.ts
scripts/dss/app/src/hooks/: useJobStream.ts
scripts/standalone/: plot_age_drug_outcomes.py  plot_diabetic.py  plot_drug_readmission.py
scripts/ui/: db.ts  server.ts
scripts/ui/app/: package.json
scripts/ui/app/src/: App.css  App.tsx  DataCatalog.css  DataCatalog.tsx  layout.ts  types.ts
scripts/ui/app/src/hooks/: useJobHistory.ts
scripts/utils/: data_source.py  notebook_loader.py  visualization.py
