[project]
name = "pzl-interview-template"
version = "0.1.0"
description = "Data science interview exercise using Hamilton and diabetes dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sf-hamilton>=1.52.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "sseclient-py>=1.8.0",
    "nbformat>=5.9.0",
]

[tool.setuptools.packages.find]
include = ["scripts*", "Sandbox*"]
exclude = ["data*", "results*"]

[project.optional-dependencies]
postgres = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
ui = [
    "sf-hamilton[visualization]",
]
notebook = [
    "papermill>=2.5.0",
]
all = [
    "pzl-interview-template[postgres,ui,notebook]",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["scripts", "Sandbox"]
